# llm-trading-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
prompts/: trading_style.txt
src/llm_trading_bot/: __init__.py  __main__.py  cli.py  config.py  display.py
src/llm_trading_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/llm_trading_bot/brokers/: backtrader_broker.py  ccxt_broker.py
src/llm_trading_bot/data/: historical.py  serialize.py
src/llm_trading_bot/llm/: client.py  prompts.py
src/llm_trading_bot/runners/: backtest.py  live.py
src/llm_trading_bot/strategies/: llm_strategy.py
src/llm_trading_bot/trading/: engine.py  executor.py  models.py
