[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-trading-bot"
version = "0.1.0"
description = "LLM-driven trading bot with backtest, paper, and live modes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "backtrader>=1.9.78.123",
    "ccxt>=4.4.0",
    "openai>=1.58.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
]

[project.scripts]
llm-bot = "llm_trading_bot.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
